@startuml
title Figure 6. Identity, Tenant, and Membership Domain Classes

skinparam monochrome true
skinparam backgroundColor white
skinparam defaultFontName Arial
skinparam defaultFontSize 14
skinparam shadowing false

class User {
  id: UUID
  email: string
  status: string
  platformRole: string
}

class Organization {
  id: UUID
  parentId: UUID?
  rootOrganizationId: UUID
  joinBonusPoints: integer
  status: string
}

class OrganizationMembership {
  role: string
  status: string
  approvedBy: UUID?
}

class OrganizationEmailDomain {
  domain: string
  autoJoin: boolean
}

class OrganizationEmailAllowlist {
  email: string
  usedAt: timestamp?
}

class EmailVerificationToken
class PasswordResetToken

class RefreshToken {
  tokenFamilyId: UUID
  expiresAt: timestamp
  revokedAt: timestamp?
}

class OAuthAccount {
  provider: string
  providerUserId: string
}

Organization "0..1 parent" <-- "0..* children" Organization
Organization "1 root" <-- "1..* tenant organizations" Organization

User "1" -- "0..*" OrganizationMembership
Organization "1" -- "0..*" OrganizationMembership
Organization "1" -- "0..*" OrganizationEmailDomain
Organization "1" -- "0..*" OrganizationEmailAllowlist

User "1" -- "0..*" EmailVerificationToken
User "1" -- "0..*" PasswordResetToken
User "1" -- "0..*" RefreshToken
User "1" -- "0..*" OAuthAccount
@enduml
